Working on introduction to BFG
Also make em and strong tags style correctly :-)

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -477,3 +477,11 @@ footer a:hover {
 
 /* Mobile Portrait Size to Mobile Landscape Size (devices and browsers) */
 @media only screen and (max-width: 479px) {}
+
+strong {
+  font-weight: bold;
+}
+
+em, i {
+  font-style: italic;
+}
